--- a/jobs.html
+++ b/jobs.html
@@ -1,1 +1,40 @@
-{\rtf1}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>Midterm Java Jobs</title>
+<link rel="stylesheet" href="exam.css"/>
+<meta charset="utf-8">
+</head>
+<body>
+<div id=wrapper>
+<header>
+  <h1>Midterm Java Jobs</h1>
+</header>
+<nav>
+  <ul>
+     <li><a href="index.html">Home</a></li>
+     <li><a href="jobs.html">Jobs</a></li>
+   </ul>
+</nav>
+<main>
+<div id="content">
+<img src="herojobs.jpg" alt="topimage">
+<h1>Jobs at our Columbus Location</h1>
+Want to work for us? Fill out the form below to start your application. Required fields are marked with an asterisk (*).
+<form action="https://webdevbasics.net/scripts/pacific.php" method="post">
+  *Name: <input type="text" name="name"><br>
+  *Email: <input type="email" name="email"><br>
+  *Experience: <input type="text" name="experience"><br>
+  <input type="submit" value="submit">
+</form>
+</div>
+</main>
+<footer>
+  <small>
+    <i>Copyright 2019 Midterm Java</i><br>
+    <a href="mailto:Spencer@Korioth.com">Spencer@Korioth.com</a>
+  </small>
+</footer>
+</div>
+</body>
+</html>
